<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:id="@+id/guideTop"
            app:layout_constraintGuide_percent="0.04"
            android:orientation="horizontal"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/imgMenu"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideTop"
            android:padding="10dp"
            android:src="@drawable/ic_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/imgSearch"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideTop"
            android:padding="10dp"
            android:src="@drawable/ic_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginLeft="15dp"
            style="?android:attr/textAppearanceMedium"
            android:id="@+id/tvPopular"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideTop"
            android:text="@string/popular"
            android:textColor="@color/textPopular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.viewpager.widget.ViewPager
            android:layout_marginTop="5dp"
            android:id="@+id/viewPagerPopular"
            app:layout_constraintTop_toBottomOf="@id/tvPopular"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

<!--        truyen ma-->
        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            style="?android:attr/textAppearanceMedium"
            android:id="@+id/tvFirstCategory"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewPagerPopular"
            android:text="@string/horrorStory"
            android:textColor="@color/textPopular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            style="?android:attr/textAppearanceSmall"
            android:id="@+id/tvSeeMoreHorror"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewPagerPopular"
            android:text="@string/seeMoreHorror"
            android:textColor="@color/SeeMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="15dp"
            android:id="@+id/recyclerHorror"
            android:layout_marginLeft="15dp"
            app:layout_constraintTop_toBottomOf="@id/tvFirstCategory"
            android:layout_width="match_parent"
            android:layout_height="180dp"/>

<!--        truyen ngắn-->

        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            style="?android:attr/textAppearanceMedium"
            android:id="@+id/tvSecondCategory"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerHorror"
            android:text="@string/shortStory"
            android:textColor="@color/textPopular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            style="?android:attr/textAppearanceSmall"
            android:id="@+id/tvSeeMoreShort"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerHorror"
            android:text="@string/seeMoreHorror"
            android:textColor="@color/SeeMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="15dp"
            android:id="@+id/recyclerShort"
            android:layout_marginLeft="15dp"
            app:layout_constraintTop_toBottomOf="@id/tvSecondCategory"
            android:layout_width="match_parent"
            android:layout_height="180dp"/>

<!--        truyen nguyen ngoc ngan-->

        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            style="?android:attr/textAppearanceMedium"
            android:id="@+id/tvThirdCategory"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerShort"
            android:text="@string/nguyenNgocNganStory"
            android:textColor="@color/textPopular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            style="?android:attr/textAppearanceSmall"
            android:id="@+id/tvSeeMoreNNN"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerShort"
            android:text="@string/seeMoreHorror"
            android:textColor="@color/SeeMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="15dp"
            android:id="@+id/recyclerNNN"
            android:layout_marginLeft="15dp"
            app:layout_constraintTop_toBottomOf="@id/tvThirdCategory"
            android:layout_width="match_parent"
            android:layout_height="180dp"/>

<!--        long story-->

        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            style="?android:attr/textAppearanceMedium"
            android:id="@+id/tvFourthCategory"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerNNN"
            android:text="@string/longStory"
            android:textColor="@color/textPopular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            style="?android:attr/textAppearanceSmall"
            android:id="@+id/tvSeeMoreLong"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerNNN"
            android:text="@string/seeMoreHorror"
            android:textColor="@color/SeeMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="15dp"
            android:id="@+id/recyclerLong"
            android:layout_marginLeft="15dp"
            app:layout_constraintTop_toBottomOf="@id/tvFourthCategory"
            android:layout_width="match_parent"
            android:layout_height="180dp"/>

<!--        truyen kiem hiep-->

        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            style="?android:attr/textAppearanceMedium"
            android:id="@+id/tvFifthCategory"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerLong"
            android:text="@string/bladeStory"
            android:textColor="@color/textPopular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            style="?android:attr/textAppearanceSmall"
            android:id="@+id/tvSeeMoreBlade"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerLong"
            android:text="@string/seeMoreHorror"
            android:textColor="@color/SeeMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="15dp"
            android:id="@+id/recyclerBlade"
            android:layout_marginLeft="15dp"
            app:layout_constraintTop_toBottomOf="@id/tvFifthCategory"
            android:layout_width="match_parent"
            android:layout_height="180dp"/>

<!--        <TextView-->
<!--            app:layout_constraintTop_toBottomOf="@id/re"-->
<!--            android:textColor="@color/textPopular"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:text="@string/long_text" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.core.widget.NestedScrollView>